--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body {
     font-family: 'Roboto', Arial, Helvetica, sans-serif;
 }
 
-h1, h2, h3, h4, h5, h6, ul {
+h1, h2, h3, h4, h5, h6, ul, p {
     margin: 0;
     padding: 0;
     list-style-type: none;
@@ -33,16 +33,21 @@ a:hover {
     line-height: 35px;
     text-align: right;
 }
+
+h1 {
+    font-size: 55px;
+    margin-top: 15px;
+}
 /* End General Reset */
 
 
 /* Hover FXs */
 .popping {
-    transition: box-shadow 0.3s ease-in-out;
+    transition: background-color 0.5s ease-in-out;
 }
 
 .popping:hover {
-    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.4);
+    background-color: #006aff;
 }
 /* Hover FXs */
 
@@ -64,11 +69,20 @@ a:hover {
     color: #031c4e;
 }
 
+.font-size-25 {
+    font-size: 25px;
+}
+
+.font-size-13 {
+    font-size: 13px;
+}
+
 .wrapper {
     /* Test */
     max-width: 1100px;
     margin: auto;
 }
+
 .small-wrapper {
     /* Test */
     max-width: 900px;
@@ -84,7 +98,7 @@ a:hover {
 
 /* Header */
 header nav {
-    padding: 15px 0;
+    padding: 10px 0;
 }
 
 header .logo {
@@ -101,12 +115,15 @@ header nav ul li:nth-child(n+2) {
 }
 
 header nav ul li {
-    line-height: 35px;
+    line-height: 30px;
 }
 
-header nav ul li a:hover,
-header nav ul li .signup-btn:hover {
+header nav ul li a:hover {
     color: #0069ff;
+}
+
+header nav ul li .signup-btn:hover {
+    color: white;
 }
 
 .signup-btn {
@@ -114,6 +131,90 @@ header nav ul li .signup-btn:hover {
     color: #0069ff;
     position: relative;
     bottom: 2px;
+}
+
+/* Jumbotron */
+header .banner {
+    background-image: url(../img/ms-jumbo.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+header .banner .wrapper {
+    padding: 45px 0;
+}
+
+header .banner p {
+    font-size: 20px;
+    margin-top: 15px;
+    color: rgba(223, 223, 223, 0.842);
+}
+
+header .banner .register-box {
+    text-align: center;
+    background-color: white;
+    border-radius: 5px;
+    padding: 30px 15px 25px 15px;
+    max-width: 100%;
+    margin-left: 20px;
+    margin-right: 150px;
+}
+
+header .banner .register-box h3 {
+    margin: 10px 0;
+}
+
+header .banner .register-box .register-form input {
+    border: 1px solid rgba(128, 128, 128, 0.157);
+    box-shadow: none;
+}
+
+header .banner .register-box button {
+    margin-bottom: 10px;
+    width: 100%;
+    color: white;
+    background-color: #0069ff;
+}
+
+header .banner .register-box .register-form button:last-child {
+    border: 0;
+    box-shadow: 1px 1px 3px rgba(128, 128, 128, 0.698);
+    background-color: white;
+    color: rgb(71, 71, 71);
+    font-weight: 500;
+    position: relative;
+}
+
+header .banner .register-box .register-form .google-icon {
+    width: 20px;
+    position: absolute;
+    top: 6px;
+    left: 6px;
+}
+
+/* Media Query */
+@media all and (max-width: 767px) {
+    header .banner .register-box {
+        margin: 0;
+        max-width: 100%;
+        margin-top: 20px;
+    }
+
+    h1 {
+        font-size: 40px;
+    }
+}
+
+@media all and (min-width: 768px) and (max-width: 1199px) {
+    header .banner .register-box {
+        margin: 0;
+        max-width: 100%;
+        margin-top: 20px;
+    }
+
+    h1 {
+        font-size: 40px;
+    }
 }
 /* End Header */
 
