--- a/css/style.css
+++ b/css/style.css
@@ -371,17 +371,48 @@ main .white-section .wrapper .info-col {
     margin-bottom: 15px;
 }
 
+main .white-section .wrapper .info-col a {
+    display: inline-block;
+    margin-top: 10px;
+    color: #0069ff;
+}
+
+main section:nth-of-type(4) h2{
+    padding: 20px 0px 25px;
+}
+
 /* Service Tab Section */
 main .blue-section .wrapper .tab-row {
     margin-top: 15px;
 }
 
-.white-line {
+main .blue-section .wrapper .tab-row:nth-of-type(6) {
+    margin-bottom: 35px;
+}
+
+main .blue-section .wrapper .tab-row .white-line {
     height: 30px;
     width: 95%;
     border-bottom: 1px solid white;
 }
 
+main .blue-section .wrapper .tab-row a:hover {
+    color: #fff;
+}
+
+/* Media Query Smartphone */
+@media all and (max-width: 767px) {
+    main .blue-section .wrapper .tab-row .white-line {
+       margin: auto;
+       margin-top: 3px;
+    }
+
+    main .blue-section .wrapper .tab-row {
+        font-size: 12px;
+    }
+}
+
+/* 2nd Slider Section */
 
 
 
