added get started now section

--- a/css/style.css
+++ b/css/style.css
@@ -436,6 +436,11 @@ main .grey-section .small-wrapper .rockerbox a {
 }
 
 
+/* Get Started Section */
+main .blue-section .small-wrapper a {
+    margin: 20px 0;
+}
+
 
 
 
